src/test/resources/Parser/SyntaxErrors/UnfulfillableConstraintFixed.front
class A<T>:
    where T > List<float64>

    test(t: T) {
        ((int32) t)+5;
    }

class List<E>: